--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
+    "local": "node --watch server-local.js",
+    "mysql": "node --watch server-mysql.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
